objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Lead_Status__c</fullName>
        <label>Lead Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call - No Answer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Busy/Not Available</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wrong Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Follow Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Interested - High Rates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Interested - Not Ready</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Interested - Bad Ratings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DNQ - TIB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DNQ - Volume</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DNQ - BK/Taxes/CRA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DNC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not in Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dropped Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fax Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bad Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contacted: Follow Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contacted: Needs More Info</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Interested - With Competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DNQ - Low Volume</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DNQ - No Biz Acct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Language Barrier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Answer / Busy / Dropped</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bad / Wrong / Fax Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NI - Not Ready / High Rates / Competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DNQ - TIB / Low Volume</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DNC / Not In Biz / BK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reengage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Busy Signal</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Legal_Corporate_Name__c</fullName>
        <label>Legal/Corporate Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Lead_Stage_Date__c</fullName>
        <label>New Lead Stage Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>No_Answer_Counter__c</fullName>
        <defaultValue>0</defaultValue>
        <label>No Answer Counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Not_Interested_Lead_Stage_Date__c</fullName>
        <label>Not Interested Lead Stage Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Number_of_Inbound_Calls__c</fullName>
        <label>Number of Inbound Calls</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Outbound_Calls__c</fullName>
        <label>Number of Outbound Calls</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opener_Name__c</fullName>
        <label>Opener Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Phone__c</fullName>
        <formula>Owner:User.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Profile_Name__c</fullName>
        <formula>Owner:User.Profile.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Profile Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purpose_of_Funding__c</fullName>
        <label>Purpose of Funding</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Recording__c</fullName>
        <label>Recording</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SIC_Code__c</fullName>
        <label>SIC Code</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SIC_Description__c</fullName>
        <label>SIC Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Task_Comment__c</fullName>
        <label>Task Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Task_Subject__c</fullName>
        <label>Task Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Zone__c</fullName>
        <label>Time Zone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_in_Business__c</fullName>
        <label>Time in Business</label>
        <picklist>
            <picklistValues>
                <fullName>0-3 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 months – 1 year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-3 Years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3-5 Years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5-10 Years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10+ Years</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Activities__c</fullName>
        <formula>Total_Calls__c + Total_Event__c + Total_Task__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Activities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Calls__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Calls</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Dials__c</fullName>
        <label>Total Dials</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Event__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Event</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Task__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Task</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type_Of_Business__c</fullName>
        <label>Type Of Business</label>
        <picklist>
            <picklistValues>
                <fullName>Corporation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partnership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cooperative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sole Proprietorship</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Unconverted_Lead_ByPass__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Unconverted Lead ByPass</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Working_Contacted_Lead_Stage_Date__c</fullName>
        <label>Working Contacted Lead Stage Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>n2de__Action__c</fullName>
        <label>Distribution action</label>
        <picklist>
            <picklistValues>
                <fullName>Contacted</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>n2de__Distribution_count__c</fullName>
        <description>The number of times this record has been assigned via Distribution Engine</description>
        <inlineHelpText>The number of times this record has been assigned via Distribution Engine</inlineHelpText>
        <label>Distribution count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>n2de__Is_archived__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is archived</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>n2de__Is_distributed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is distributed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>n2de__Is_reassigned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is auto reassigned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>n2de__Is_rejected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is rejected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>n2de__Is_trigger_enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Trigger enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>n2de__Is_triggered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is triggered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>n2de__Last_archive_date__c</fullName>
        <label>Last archive date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>n2de__Last_distributed__c</fullName>
        <label>Last distributed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>n2de__Last_reassigned__c</fullName>
        <label>Last reassigned</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>n2de__Last_rejected__c</fullName>
        <description>Date &amp; time that the DE assignment of this lead was last rejected</description>
        <inlineHelpText>Date &amp; time that the DE assignment of this lead was last rejected</inlineHelpText>
        <label>Last rejected</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>n2de__Source_queue__c</fullName>
        <label>Source queue</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>n2de__Time_to_action_mins__c</fullName>
        <label>Time to action (mins)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.TITLE</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Qualified</value>
        </filters>
        <label>All Open Leads</label>
    </listViews>
    <listViews>
        <fullName>Customer_Success_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Customer Success</label>
        <queue>Customer_Success</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Maple_Bad_Wrong_Fax_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Maple Bad/Wrong/Fax</label>
        <queue>Maple_Bad_Wrong_Fax</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Maple_DNC_Not_In_Biz_BK_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Maple DNC / Not In Biz / BK</label>
        <queue>Maple_DNC_Not_In_Biz_BK</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Maple_DNQ_TIB_Low_Volume_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Maple DNQ TIB Low Volume</label>
        <queue>Maple_DNQ_TIB_Low_Volume</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Maple_Language_Barrier_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Maple Language Barrier</label>
        <queue>Maple_Language_Barrier</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Maple_Not_Interested_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Maple Not Interested</label>
        <queue>Maple_Not_Interested</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Maple_Unconverted_Leads_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Maple Unconverted Leads</label>
        <queue>Maple_Unconverted_Leads</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>TodaysLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Leads</label>
    </listViews>
    <recordTypes>
        <fullName>Interested</fullName>
        <active>true</active>
        <businessProcess>Raw Data</businessProcess>
        <label>Interested</label>
    </recordTypes>
    <recordTypes>
        <fullName>Raw_Data</fullName>
        <active>true</active>
        <businessProcess>Raw Data</businessProcess>
        <label>Raw Data</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Agent_cannot_change_the_Record_Owner</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED(OwnerId) &amp;&amp; $User.ProfileId = $Label.Sales_Agent_Profile_ID</errorConditionFormula>
        <errorMessage>Sales Agent are not authorized to change the ownership. Please contact your Manager</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cloufi__AddOppOnConvLead</fullName>
        <active>true</active>
        <errorConditionFormula>IsConverted
&amp;&amp;
ConvertedOpportunityId  =  null</errorConditionFormula>
        <errorMessage>Please Add an Opportunity in order to convert a Lead.</errorMessage>
    </validationRules>
</CustomObject>